--- a/delivery/index.html
+++ b/delivery/index.html
@@ -209,235 +209,213 @@
         <section>
             <div class="container">
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/los angeles.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/los angeles.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Los Angeles</h3>
                         <p>Con queso azul, panceta, cebolla caramelizada y rucula</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6990 </p>
+                        <p>$4890 </p>
                     </div>
 
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/chicago.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/chicago.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Chicago</h3>
                         <p>Con queso cheddar, paceta y barbacoa</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6990 </p>
+                        <p>$4890 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/kansas.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/kansas.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>kansas</h3>
                         <p>Con queso de maquina, jamon, lechuga y tomate</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6990 </p>
+                        <p>$4890 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/texas.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/texas.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Texas</h3>
                         <p>Con queso de cheddar, lechuga, cebolla y salsa thousand island</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6990 </p>
+                        <p>$4890 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/oklahoma.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/oklahoma.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Oklahoma</h3>
                         <p>Doble hamburguesa con queso de cheddar, panceta, cebolla, pepino y salsa granero</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$7990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$7990 </p>
+                        <p>$6290 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/california.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/california.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Michigan</h3>
                         <p>Con Cheddar, panceta, aros de cebolla, lechuga y alioli</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6990 </p>
+                        <p>$4890 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/granero66.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/granero66.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Granero 66</h3>
                         <p>Con queso provolone, tomate, cebolla caramelizada y rúcula</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6990 </p>
+                        <p>$4890 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/las vegas.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/las vegas.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Las Vegas</h3>
                         <p>Doble hamburguesa con queso cheddar, panceta, cebolla morada y salsa granero, con un baño de
                             cheddar y panceta</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$7990</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$7990 </p>
+                        <p>$6590 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/logos/minilogo.png" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/logos/minilogo.png" alt="">
                     <div class="boxMenu-2">
                         <h3>Santa Monica</h3>
                         <p>Hamburguesa de lentejas y verdeo con lechuga, tomate y cebolla</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6390</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6390 </p>
+                        <p>$4590 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/california.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/california.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>California</h3>
                         <p>Con queso cheddar</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6390</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6390</p>
+                        <p>$4790 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/simple.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/comidas/hamburguesas/simple.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Simple</h3>
                         <p>Solo con medallon de carne</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$6090</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
+                        <p>Con papas </p>
                         <p>Solo </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$6090 </p>
+                        <p>$4590 </p>
                     </div>
                 </div>
             </div>
