--- a/delivery/pages/bebidas.html
+++ b/delivery/pages/bebidas.html
@@ -189,86 +189,86 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Pepsi</h3>
                     <p>Comun o black (sin azucar)</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Seven up</h3>
                     <p>Comun o free (sin azucar)</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Mirinda</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Paso de los toros</h3>
                     <p>Tonica o pomelo</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Saborizadas</h3>
                     <p>Pomelo, naranja o manzana</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Agua mineral</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
@@ -277,30 +277,30 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Andes</h3>
                     <p>Rubia, roja o negra</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1600</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$1600 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Budweiser</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1600</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$1600 </p>
                 </div>
             </div>
 
