--- a/delivery/pages/celiacos.html
+++ b/delivery/pages/celiacos.html
@@ -190,86 +190,78 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Bacon</h3>
                     <p>Con cheddar y panceta</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5590</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5590 </p>
+                    <p>$7890 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Classic</h3>
                     <p>Simple sin queso</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5090</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5090 </p>
+                    <p>$7190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Blue</h3>
                     <p>Con queso azul, rúcula y panceta</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5590</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5590 </p>
+                    <p>$7890 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Completa</h3>
                     <p>Con jamón, queso, lechuga y tomate</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5590</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5590 </p>
+                    <p>$7890 </p>
                 </div>
             </div>
 
@@ -278,44 +270,36 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/ensaladas/cesar.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/ensaladas/cesar.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Cesar</h3>
                     <p>Con lechuga, queso provolone, pollo, croutons y salsa cesar</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$4690</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$4690 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/ensaladas/arizona.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/ensaladas/arizona.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Arizona</h3>
                     <p>Con lechuga, zanahoria, tomate y pollo</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$4690</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$4690 </p>
                 </div>
             </div>
 
@@ -324,23 +308,19 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Tostado</h3>
                     <p>Con jamón y queso</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$2900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$2900 </p>
                 </div>
             </div>
 
@@ -349,43 +329,35 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Papas fritas</h3>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$1990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Papas Granero</h3>
                     <p>Con cheddar y panceta</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$2900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$2900 </p>
                 </div>
             </div>
 
@@ -394,84 +366,68 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Alfajor negro o blanco</h3>
                     <p>Negro o blanco</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Alfajor de maicena</h3>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Brownie</h3>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$2490</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$2490 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Pastafrola</h3>
                     <p>De batata</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$2490</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$2490 </p>
                 </div>
             </div>
 
