--- a/delivery/pages/ensaladas.html
+++ b/delivery/pages/ensaladas.html
@@ -205,44 +205,36 @@
         <section>
             <div class="container">
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../../images/granero/comidas/ensaladas/cesar.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/ensaladas/cesar.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Cesar</h3>
                         <p>Con lechuga, queso provolone, pollo, croutons y salsa cesar</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$4690</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
-                        <p>Solo </p>
+                        <p> </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$4690 </p>
                     </div>
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../../images/granero/comidas/ensaladas/arizona.webp" alt="">
+                    <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/ensaladas/arizona.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Arizona</h3>
                         <p>Con lechuga, zanahoria, tomate y pollo</p>
                         <div class="boxMenu-4-2">
-                            <p>$300</p>
+                            <p>$4690</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
-                        <p>Con cerveza </p>
-                        <p>Con gaseosa </p>
-                        <p>Solo </p>
+                        <p> </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$500 </p>
-                        <p>$500 </p>
-                        <p>$500 </p>
+                        <p>$4690 </p>
                     </div>
                 </div>
 
