--- a/delivery/pages/hotdog.html
+++ b/delivery/pages/hotdog.html
@@ -184,86 +184,78 @@
     <section>
         <div class="container">
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/hot dog/boom.jpeg" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/hot dog/boom.jpeg" alt="">
                 <div class="boxMenu-2">
                     <h3>Boom</h3>
                     <p>Con cheddar y panceta</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$6290</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$6290 </p>
+                    <p>$4200 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/hot dog/criollo.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/hot dog/criollo.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Criollo</h3>
                     <p>Con salsa criolla</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5990 </p>
+                    <p>$3900 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/hot dog/chucrut.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/hot dog/chucrut.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Chucrut</h3>
                     <p>Con repollo</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5990 </p>
+                    <p>$3900 </p>
                 </div>
             </div>
             
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/hot dog/simple.webp" alt="">
+                <img loading="lazy"  class="imagenMenu" src="../../images/granero/comidas/hot dog/simple.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Simple</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$5990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$5990 </p>
+                    <p>$3900 </p>
                 </div>
             </div>
 
