--- a/delivery/pages/mila.html
+++ b/delivery/pages/mila.html
@@ -184,149 +184,135 @@
     <section>
         <div class="container">
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/seligman.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/seligman.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Seligman</h3>
                     <p>Con queso provolone, rúcula y jamón crudo</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/misuri.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/misuri.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Misuri</h3>
                     <p>Con queso de maquina, jamón, lechuga y tomate</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/kingman.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/kingman.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Kingman</h3>
                     <p>Con cheddar y panceta</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/historica.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/historica.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Histórica</h3>
                     <p>Con muazzarella, jamón, salsa de tomate y oregano</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/williams.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/williams.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Williams</h3>
                     <p>Con queso azul y jamón</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/alburquerque.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/alburquerque.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Alburquerque</h3>
                     <p>Con huevo frito</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/ilinois.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/milanesas/ilinois.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Ilinois</h3>
                     <p>Con queso de maquina, panceta y cebolla caramelizada</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
