--- a/delivery/pages/paraPicar.html
+++ b/delivery/pages/paraPicar.html
@@ -184,107 +184,106 @@
     <section>
         <div class="container">
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/picar/chiken.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/picar/chiken.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Chicken</h3>
                     <p>Patitas de pechuga de pollo caseras</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$6990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$6990 </p>
+                    <p>$4790 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/picar/rabas.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <div class="boxMenu-2">
+                    <h3>Aros de cebolla</h3>
+                    <p></p>
+                    <div class="boxMenu-4-2">
+                        <p>$3500</p>
+                    </div>
+                </div>
+                <div class="boxMenu-3">
+                    <p> </p>
+                </div>
+                <div class="boxMenu-4">
+                    <p>$3500 </p>
+                </div>
+            </div>
+
+            <div class="boxMenu">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/picar/rabas.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Rabas</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$6800</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$6800 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/picar/picada tandilera.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/picar/picada tandilera.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Picada tandilera</h3>
                     <p>Con fiambres</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7990 </p>
                 </div>
             </div>
             
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Papas granero</h3>
                     <p>Con cheddar y panceta</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$2990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$2990 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Papas fritas</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$1990 </p>
                 </div>
             </div>
 
