--- a/delivery/pages/philys.html
+++ b/delivery/pages/philys.html
@@ -184,86 +184,78 @@
     <section>
         <div class="container">
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/carne.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/phily/carne.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Phily carne</h3>
                     <p>Carne desmenuzada con queso provolone gratinado</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/pollo.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/phily/pollo.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Phily pollo</h3>
                     <p>Pollo desmenuzado con queso provolone gratinado</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/albondigas.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/phily/albondigas.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Phily albondigas</h3>
                     <p>Albondigas con queso provolone gratinado</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Phily vegetales</h3>
                     <p>Vegetales con queso provolone gratinado</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$7190</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$7190 </p>
+                    <p>$5190 </p>
                 </div>
             </div>
 
