--- a/delivery/pages/sandwiches.html
+++ b/delivery/pages/sandwiches.html
@@ -185,85 +185,75 @@
     <section>
         <div class="container">
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/lomo simple.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/phily/lomo simple.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Lomito simple</h3>
                     <p>Sandwich de lomito con pan casero</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$6590</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$6590 </p>
+                    <p>$4990 </p>
                 </div>
             </div>
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/lomito completo.webp" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/comidas/phily/lomito completo.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Lomito completo</h3>
                     <p>Sandwich de lomito con jamón, queso, lechuga y tomate en pan casero</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$6990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con papas </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$6990 </p>
+                    <p>$5390 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Tostado</h3>
                     <p>Con jamón y queso</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$3800</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
+                    <p>Con cafe </p>
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$3800 </p>
+                    <p>$3000 </p>
                 </div>
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
+                <img loading="lazy" class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>jamón crudo y queso</h3>
                     <p>Sandwich de jamón crudo y queso tostado en pan casero</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$3900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cerveza </p>
-                    <p>Con gaseosa </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
+                    <p>$3900 </p>
                 </div>
             </div>
 
